// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example.js - babylon-verify 1`] = `
function f() {↓
  console.log("testing line endings");↓
}↓
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function f() {↓
  console.log("testing line endings");↓
}↓

`;

exports[`example.js - babylon-verify 2`] = `
function f() {↓
  console.log("testing line endings");↓
}↓
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function f() {←
  console.log("testing line endings");←
}←

`;

exports[`example.js - babylon-verify 3`] = `
function f() {↓
  console.log("testing line endings");↓
}↓
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function f() {↵
  console.log("testing line endings");↵
}↵

`;

exports[`example.js - babylon-verify 4`] = `
function f() {↓
  console.log("testing line endings");↓
}↓
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function f() {↓
  console.log("testing line endings");↓
}↓

`;
